fix safari + ie stretch image issue

--- a/src/assets/styles/components/carousel/_carousel-item.scss
+++ b/src/assets/styles/components/carousel/_carousel-item.scss
@@ -29,6 +29,7 @@
     &__image {
         width: 100%;
         max-width: 330px;
+        height: 100%;
     }
     &__header-container {
         height: 50px;
